fix: when displaying toolbar text, the icons are not centered(#682)

--- a/packages/MdEditor/styles/preview.less
+++ b/packages/MdEditor/styles/preview.less
@@ -68,7 +68,7 @@
     height: 24px;
     fill: currentColor;
     overflow: hidden;
-    display: block;
+    display: inline;
   }
 
   i&-iconfont {
